--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@
 
 [GENERAL]
 # Mode: "basic" or "mcp"
-mode = "basic"
+mode = "mcp"
 
 [LLM_API]
 api_base_url = "https://openrouter.ai/api/v1"
@@ -20,4 +20,4 @@ hist_reset_size = 8
 
 [MCP]
 # MCP server URL for tool calling (only used when mode = "mcp")
-# server_url = "http://localhost:8000/mcp"
+server_url = "http://localhost:8000/mcp"
