--- a/config.toml
+++ b/config.toml
@@ -3,12 +3,16 @@
 
 [GENERAL]
 # Mode: "basic" or "mcp"
-mode = "mcp"
+mode = "basic"
 
 [LLM_API]
 api_base_url = "https://openrouter.ai/api/v1"
 api_key_env = "OPENROUTER_API_KEY"
-model_name = "google/gemini-2.5-flash"
+
+# Three-step pipeline uses different models for each step:
+transcriber_llm_model_name = "google/gemini-2.5-flash-lite"
+basic_chat_llm_model_name = "openai/gpt-4o-mini"
+toolcall_chat_llm_model_name = "openai/gpt-4o-mini"
 
 [TTS]
 # Supported voices: alba, marius, javert, jean, fantine, cosette, eponine, azelma
