--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,8 @@ api_base_url = "https://openrouter.ai/api/v1"
 api_key_env = "OPENROUTER_API_KEY"
 
 # Three-step pipeline uses different models for each step:
-transcriber_llm_model_name = "google/gemini-2.5-flash-lite"
+# transcriber_llm_model_name = "google/gemini-2.5-flash-lite"
+transcriber_llm_model_name = "mistralai/voxtral-small-24b-2507"
 basic_chat_llm_model_name = "openai/gpt-4o-mini"
 toolcall_chat_llm_model_name = "google/gemini-2.5-flash"
 
